--- a/faq.html
+++ b/faq.html
@@ -1,35 +1,31 @@
- .tab {
-    overflow: hidden;
-    border: 1px solid rgb(184, 178, 178);
-    font-family: "Poppins", sans-serif;
-    font-size: 1rem;
-  }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FAQ's</title>
+    <link rel="stylesheet" href="faq.css">
+</head>
+<body>
+    <h1>Accordion</h1>
+    <div class="acc">
+    <button class="faq">TAB 1</button>
+<div class="content">
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, quisquam. Distinctio perspiciatis sint perferendis accusantium! Fuga qui sunt quam temporibus quae dolor et impedit neque adipisci, libero, sapiente, incidunt voluptate!</p>
+</div>
 
-  .tab button {
-    background-color: inherit;
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 1rem 5rem;
-    transition: 0.3s;
-    font-family: "Poppins", sans-serif;
-    font-size: 1rem;
-  }
-  
-  .tab button:hover {
-    background-color: #ddd;
-  }
-  
-  .tab button.active {
-    background-color:rgb(184, 178, 178) ;
-  }
-  
-  .content {
-    display: none;
-    padding: 6px 12px;
-    border: 1px solid rgb(184, 178, 178);
-    border-top: none;
-    font-family: "Poppins", sans-serif;
-    font-size: 1.5rem;
-  }
+<button class="faq">TAB 2</button>
+<div class="content">
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos error in non repellat deleniti exercitationem ad veritatis asperiores amet deserunt vel culpa numquam molestiae expedita, earum, voluptatibus harum itaque porro?</p>
+</div>
+
+<button class="faq">TAB 3</button>
+<div class="content">
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad in praesentium, possimus officia labore cumque odit sint consequatur a cum maxime voluptatibus eius. Ea voluptatem impedit, nulla voluptate reiciendis nihil eligendi dolorem.</p>
+</div>
+</div>
+<script src="faq.js"></script>
+
+</body>
+</html>
