--- a/color.html
+++ b/color.html
@@ -4,27 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS Projects</title>
+    <title>color switcher</title>
+    <link rel="stylesheet" href="color.css">
 </head>
 <body>
-<h1>Javascript Projects</h1>
-<a class="link" href="color.html">COLOR SWITCHER</a>
-<a class="link" href="counter.html">COUNTER</a>
-<a class="link" href="tabs.html">TABS</a>
-<a class="link" href="carousel.html">CAROUSEL</a>
-<a class="link" href="faq.html">FAQ's</a>
-<a class="link" href="rps.html">ROCK,PAPER SCISSORS</a>
-
-<style>
-h1{
-font-size: 4rem;
-}
-.link{
-font-size: 1.5rem;
-display: block;
-margin-bottom: 1rem;
-}
-
-</style>
+    <div class="hello">
+    <h1>Color Switcher</h1>
+    <h2>Background Color: <span class="color">#F1F5F8</span></h2>
+    <button  class="btn1" id="btn1">CLICK HERE(Array)</button>
+    <button  class="btn" id="btn">CLICK HERE(Hexcode)</button>
+</div>
 </body>
+<script src="color.js"></script>
 </html>
